[gd_scene load_steps=15 format=3 uid="uid://kingswatch_ruins_001"]

[ext_resource type="Script" path="res://scripts/levels/kings_watch.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/player/player.tscn" id="2"]
[ext_resource type="PackedScene" path="res://scenes/ui/hud.tscn" id="3"]
[ext_resource type="Texture2D" uid="uid://gmwgb548r8l7" path="res://Sprite folders grab bag/stonefloor.png" id="4"]
[ext_resource type="Texture2D" uid="uid://dh326odj53nps" path="res://Sprite folders grab bag/stonewall.png" id="5"]

[sub_resource type="ProceduralSkyMaterial" id="sky_mat"]
sky_top_color = Color(0.4, 0.45, 0.55, 1)
sky_horizon_color = Color(0.55, 0.58, 0.65, 1)
ground_bottom_color = Color(0.25, 0.28, 0.32, 1)
ground_horizon_color = Color(0.45, 0.48, 0.52, 1)

[sub_resource type="Sky" id="sky"]
sky_material = SubResource("sky_mat")

[sub_resource type="Environment" id="Environment_kings_watch"]
background_mode = 2
sky = SubResource("sky")
ambient_light_source = 2
ambient_light_color = Color(0.5, 0.55, 0.65, 1)
ambient_light_energy = 0.5
fog_enabled = true
fog_light_color = Color(0.45, 0.5, 0.58, 1)
fog_density = 0.015
fog_sky_affect = 0.6
fog_height = 20.0
fog_height_density = 0.08

[sub_resource type="StandardMaterial3D" id="mat_ancient_stone"]
albedo_color = Color(0.42, 0.4, 0.38, 1)
albedo_texture = ExtResource("4")
roughness = 0.98
uv1_scale = Vector3(12, 12, 1)
texture_filter = 0

[sub_resource type="StandardMaterial3D" id="mat_rock"]
albedo_color = Color(0.35, 0.33, 0.3, 1)
roughness = 1.0

[sub_resource type="StandardMaterial3D" id="mat_moss_stone"]
albedo_color = Color(0.35, 0.4, 0.32, 1)
roughness = 0.95

[sub_resource type="StandardMaterial3D" id="mat_tower"]
albedo_color = Color(0.32, 0.3, 0.28, 1)
albedo_texture = ExtResource("5")
roughness = 0.95
uv1_scale = Vector3(4, 8, 1)
texture_filter = 0

[sub_resource type="StandardMaterial3D" id="mat_wall"]
albedo_color = Color(0.38, 0.36, 0.33, 1)
albedo_texture = ExtResource("5")
roughness = 0.95
uv1_scale = Vector3(6, 2, 1)
texture_filter = 0

[sub_resource type="StandardMaterial3D" id="mat_fire"]
albedo_color = Color(1, 0.5, 0.1, 1)
emission_enabled = true
emission = Color(1, 0.4, 0.1, 1)
emission_energy_multiplier = 2.0

[sub_resource type="StandardMaterial3D" id="mat_metal"]
albedo_color = Color(0.3, 0.28, 0.25, 1)
metallic = 0.5
roughness = 0.6

[node name="KingsWatch" type="Node3D"]
script = ExtResource("1")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_kings_watch")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866, -0.433, 0.25, 0, 0.5, 0.866, -0.5, -0.75, 0.433, 0, 50, 0)
light_color = Color(0.75, 0.78, 0.85, 1)
light_energy = 0.8
shadow_enabled = true
shadow_bias = 0.02
directional_shadow_max_distance = 150.0

[node name="Terrain" type="Node3D" parent="."]

[node name="MountainBase" type="CSGBox3D" parent="Terrain"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, 0)
use_collision = true
size = Vector3(100, 20, 100)
material = SubResource("mat_rock")

[node name="RuinsPlatform" type="CSGBox3D" parent="Terrain"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7.5, 0)
use_collision = true
size = Vector3(60, 1, 60)
material = SubResource("mat_ancient_stone")

[node name="NorthCliff" type="CSGBox3D" parent="Terrain"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -35)
use_collision = true
size = Vector3(70, 15, 8)
material = SubResource("mat_rock")

[node name="EastCliff" type="CSGBox3D" parent="Terrain"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 35, 1, 0)
use_collision = true
size = Vector3(8, 15, 70)
material = SubResource("mat_rock")

[node name="WestCliff" type="CSGBox3D" parent="Terrain"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -35, 1, 0)
use_collision = true
size = Vector3(8, 15, 70)
material = SubResource("mat_rock")

[node name="BrokenFlagstones" type="Node3D" parent="Terrain"]

[node name="Slab_0" type="CSGBox3D" parent="Terrain/BrokenFlagstones"]
transform = Transform3D(0.955, 0, 0.296, 0, 1, 0, -0.296, 0, 0.955, -18, 8.1, 12)
use_collision = true
size = Vector3(3.5, 0.15, 4.2)
material = SubResource("mat_ancient_stone")

[node name="Slab_1" type="CSGBox3D" parent="Terrain/BrokenFlagstones"]
transform = Transform3D(0.988, 0, -0.156, 0, 1, 0, 0.156, 0, 0.988, 10, 8.18, -8)
use_collision = true
size = Vector3(4.0, 0.2, 3.8)
material = SubResource("mat_moss_stone")

[node name="Slab_2" type="CSGBox3D" parent="Terrain/BrokenFlagstones"]
transform = Transform3D(0.921, 0, 0.389, 0, 1, 0, -0.389, 0, 0.921, -5, 8.05, -15)
use_collision = true
size = Vector3(2.8, 0.1, 3.5)
material = SubResource("mat_ancient_stone")

[node name="Slab_3" type="CSGBox3D" parent="Terrain/BrokenFlagstones"]
transform = Transform3D(0.974, 0, -0.225, 0, 1, 0, 0.225, 0, 0.974, 20, 8.12, 5)
use_collision = true
size = Vector3(3.2, 0.14, 2.9)
material = SubResource("mat_moss_stone")

[node name="Slab_4" type="CSGBox3D" parent="Terrain/BrokenFlagstones"]
transform = Transform3D(0.866, 0, 0.5, 0, 1, 0, -0.5, 0, 0.866, -12, 8.08, -5)
use_collision = true
size = Vector3(4.5, 0.16, 4.0)
material = SubResource("mat_ancient_stone")

[node name="Slab_5" type="CSGBox3D" parent="Terrain/BrokenFlagstones"]
transform = Transform3D(0.996, 0, 0.087, 0, 1, 0, -0.087, 0, 0.996, 15, 8.22, 18)
use_collision = true
size = Vector3(3.0, 0.24, 3.6)
material = SubResource("mat_moss_stone")

[node name="RockOutcrops" type="Node3D" parent="Terrain"]

[node name="Outcrop_0" type="CSGBox3D" parent="Terrain/RockOutcrops"]
transform = Transform3D(0.94, 0.1, 0.32, -0.12, 0.99, 0.05, -0.32, -0.08, 0.94, -28, 9.5, 0)
use_collision = true
size = Vector3(3.2, 3.0, 2.8)
material = SubResource("mat_rock")

[node name="Outcrop_1" type="CSGBox3D" parent="Terrain/RockOutcrops"]
transform = Transform3D(0.87, -0.08, 0.49, 0.1, 0.99, -0.03, -0.48, 0.08, 0.87, 28, 10.5, 5)
use_collision = true
size = Vector3(3.5, 5.0, 3.0)
material = SubResource("mat_rock")

[node name="Outcrop_2" type="CSGBox3D" parent="Terrain/RockOutcrops"]
transform = Transform3D(0.95, 0.05, -0.3, -0.06, 0.998, -0.02, 0.3, 0.04, 0.95, 0, 9.8, -28)
use_collision = true
size = Vector3(2.8, 3.6, 3.2)
material = SubResource("mat_rock")

[node name="Outcrop_3" type="CSGBox3D" parent="Terrain/RockOutcrops"]
transform = Transform3D(0.82, -0.12, 0.56, 0.15, 0.99, -0.02, -0.55, 0.1, 0.83, -20, 10.2, 22)
use_collision = true
size = Vector3(3.0, 4.4, 2.5)
material = SubResource("mat_rock")

[node name="Outcrop_4" type="CSGBox3D" parent="Terrain/RockOutcrops"]
transform = Transform3D(0.91, 0.08, -0.4, -0.1, 0.99, -0.03, 0.4, 0.07, 0.91, 22, 9.2, -20)
use_collision = true
size = Vector3(2.5, 2.4, 3.5)
material = SubResource("mat_rock")

[node name="Outcrop_5" type="CSGBox3D" parent="Terrain/RockOutcrops"]
transform = Transform3D(0.98, -0.1, 0.17, 0.12, 0.99, -0.08, -0.16, 0.1, 0.98, -25, 10.8, -20)
use_collision = true
size = Vector3(3.8, 5.6, 2.8)
material = SubResource("mat_rock")

[node name="Outcrop_6" type="CSGBox3D" parent="Terrain/RockOutcrops"]
transform = Transform3D(0.78, 0.15, 0.61, -0.18, 0.98, -0.02, -0.6, -0.09, 0.79, 25, 9.6, 20)
use_collision = true
size = Vector3(2.6, 3.2, 3.0)
material = SubResource("mat_rock")

[node name="RuinedWatchtower" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8, 0)

[node name="TowerBase" type="CSGCylinder3D" parent="RuinedWatchtower"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
use_collision = true
radius = 8.0
height = 2.0
sides = 8
material = SubResource("mat_tower")

[node name="NorthWall" type="CSGBox3D" parent="RuinedWatchtower"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7, -6.5)
use_collision = true
size = Vector3(6, 10, 1.2)
material = SubResource("mat_tower")

[node name="NorthWallCrumble" type="CSGBox3D" parent="RuinedWatchtower/NorthWall"]
transform = Transform3D(0.98, 0.1, -0.17, -0.1, 0.99, 0.05, 0.17, -0.03, 0.98, 0, 5.5, 0)
use_collision = true
size = Vector3(5, 1.5, 1.0)
material = SubResource("mat_tower")

[node name="EastWall" type="CSGBox3D" parent="RuinedWatchtower"]
transform = Transform3D(0, 0, 1, 0, 1, 0, -1, 0, 0, 6.5, 6, 0)
use_collision = true
size = Vector3(6, 8, 1.2)
material = SubResource("mat_tower")

[node name="EastWallCrumble" type="CSGBox3D" parent="RuinedWatchtower/EastWall"]
transform = Transform3D(0.985, 0.15, -0.08, -0.15, 0.99, 0.02, 0.08, 0, 0.997, 0, 4.5, 0)
use_collision = true
size = Vector3(5, 1.5, 1.0)
material = SubResource("mat_tower")

[node name="SouthRubble" type="CSGBox3D" parent="RuinedWatchtower"]
transform = Transform3D(0.985, 0.1, 0.14, -0.1, 0.99, -0.06, -0.14, 0.04, 0.99, 0, 3.25, 7)
use_collision = true
size = Vector3(7, 2.5, 2)
material = SubResource("mat_tower")

[node name="WestWall" type="CSGBox3D" parent="RuinedWatchtower"]
transform = Transform3D(0, 0, -1, 0, 1, 0, 1, 0, 0, -6.5, 5.5, 0)
use_collision = true
size = Vector3(6, 7, 1.2)
material = SubResource("mat_tower")

[node name="WestWallCrumble" type="CSGBox3D" parent="RuinedWatchtower/WestWall"]
transform = Transform3D(0.97, -0.2, 0.14, 0.2, 0.98, 0.03, -0.14, 0, 0.99, 0, 4, 0)
use_collision = true
size = Vector3(5, 1.5, 1.0)
material = SubResource("mat_tower")

[node name="Stairs" type="Node3D" parent="RuinedWatchtower"]

[node name="Stair_0" type="CSGBox3D" parent="RuinedWatchtower/Stairs"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 3.5)
use_collision = true
size = Vector3(2.5, 0.3, 1.0)
material = SubResource("mat_tower")

[node name="Stair_1" type="CSGBox3D" parent="RuinedWatchtower/Stairs"]
transform = Transform3D(0.878, 0, 0.479, 0, 1, 0, -0.479, 0, 0.878, 1.6, 3.3, 3.0)
use_collision = true
size = Vector3(2.5, 0.3, 1.0)
material = SubResource("mat_tower")

[node name="Stair_2" type="CSGBox3D" parent="RuinedWatchtower/Stairs"]
transform = Transform3D(0.54, 0, 0.841, 0, 1, 0, -0.841, 0, 0.54, 2.8, 4.1, 1.8)
use_collision = true
size = Vector3(2.5, 0.3, 1.0)
material = SubResource("mat_tower")

[node name="Stair_3" type="CSGBox3D" parent="RuinedWatchtower/Stairs"]
transform = Transform3D(0.07, 0, 0.998, 0, 1, 0, -0.998, 0, 0.07, 3.4, 4.9, 0.2)
use_collision = true
size = Vector3(2.5, 0.3, 1.0)
material = SubResource("mat_tower")

[node name="Stair_4" type="CSGBox3D" parent="RuinedWatchtower/Stairs"]
transform = Transform3D(-0.416, 0, 0.909, 0, 1, 0, -0.909, 0, -0.416, 3.2, 5.7, -1.6)
use_collision = true
size = Vector3(2.5, 0.3, 1.0)
material = SubResource("mat_tower")

[node name="TowerRubble" type="Node3D" parent="RuinedWatchtower"]

[node name="Rubble_0" type="CSGBox3D" parent="RuinedWatchtower/TowerRubble"]
transform = Transform3D(0.866, 0.2, 0.46, -0.25, 0.97, 0.05, -0.43, -0.16, 0.89, 10, 1.0, 5)
use_collision = true
size = Vector3(2.5, 1.5, 2.8)
material = SubResource("mat_tower")

[node name="Rubble_1" type="CSGBox3D" parent="RuinedWatchtower/TowerRubble"]
transform = Transform3D(0.707, -0.1, 0.7, 0.15, 0.99, -0.05, -0.69, 0.14, 0.71, 8, 0.75, 8)
use_collision = true
size = Vector3(3.2, 1.2, 2.4)
material = SubResource("mat_tower")

[node name="Rubble_2" type="CSGBox3D" parent="RuinedWatchtower/TowerRubble"]
transform = Transform3D(0.5, 0.25, 0.83, -0.3, 0.95, -0.1, -0.81, -0.2, 0.55, 12, 0.6, 3)
use_collision = true
size = Vector3(1.8, 0.8, 3.0)
material = SubResource("mat_tower")

[node name="Rubble_3" type="CSGBox3D" parent="RuinedWatchtower/TowerRubble"]
transform = Transform3D(0.94, -0.15, -0.3, 0.2, 0.97, 0.12, 0.27, -0.17, 0.95, -8, 0.9, 10)
use_collision = true
size = Vector3(2.2, 1.4, 2.0)
material = SubResource("mat_tower")

[node name="Rubble_4" type="CSGBox3D" parent="RuinedWatchtower/TowerRubble"]
transform = Transform3D(0.34, 0.28, 0.9, -0.35, 0.93, -0.14, -0.87, -0.27, 0.42, 6, 1.1, 12)
use_collision = true
size = Vector3(3.5, 1.8, 2.6)
material = SubResource("mat_tower")

[node name="FirePitRing" type="CSGCylinder3D" parent="RuinedWatchtower"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.25, 0)
use_collision = true
radius = 1.5
height = 0.5
sides = 8
material = SubResource("mat_rock")

[node name="FireGlow" type="CSGSphere3D" parent="RuinedWatchtower"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.8, 0)
radius = 0.6
material = SubResource("mat_fire")

[node name="FireLight" type="OmniLight3D" parent="RuinedWatchtower"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.5, 0)
light_color = Color(1, 0.6, 0.2, 1)
light_energy = 3.0
omni_range = 15.0

[node name="PerimeterWalls" type="Node3D" parent="."]

[node name="SouthWall_Left" type="Node3D" parent="PerimeterWalls"]

[node name="Segment_0" type="CSGBox3D" parent="PerimeterWalls/SouthWall_Left"]
transform = Transform3D(0.996, 0, -0.087, 0, 1, 0, 0.087, 0, 0.996, -15, 10, 25)
use_collision = true
size = Vector3(3.2, 3.5, 1.0)
material = SubResource("mat_wall")

[node name="Segment_1" type="CSGBox3D" parent="PerimeterWalls/SouthWall_Left"]
transform = Transform3D(0.998, 0, 0.07, 0, 1, 0, -0.07, 0, 0.998, -12, 10.2, 25)
use_collision = true
size = Vector3(3.0, 4.0, 1.0)
material = SubResource("mat_wall")

[node name="Segment_2" type="CSGBox3D" parent="PerimeterWalls/SouthWall_Left"]
transform = Transform3D(0.993, 0, 0.12, 0, 1, 0, -0.12, 0, 0.993, -9, 9.8, 25)
use_collision = true
size = Vector3(2.8, 3.2, 1.0)
material = SubResource("mat_wall")

[node name="SouthWall_Right" type="Node3D" parent="PerimeterWalls"]

[node name="Segment_0" type="CSGBox3D" parent="PerimeterWalls/SouthWall_Right"]
transform = Transform3D(0.998, 0, 0.06, 0, 1, 0, -0.06, 0, 0.998, 9, 9.6, 25)
use_collision = true
size = Vector3(3.0, 2.8, 1.0)
material = SubResource("mat_wall")

[node name="Segment_1" type="CSGBox3D" parent="PerimeterWalls/SouthWall_Right"]
transform = Transform3D(0.995, 0, -0.1, 0, 1, 0, 0.1, 0, 0.995, 12, 10.1, 25)
use_collision = true
size = Vector3(3.2, 3.5, 1.0)
material = SubResource("mat_wall")

[node name="Segment_2" type="CSGBox3D" parent="PerimeterWalls/SouthWall_Right"]
transform = Transform3D(0.99, 0, 0.14, 0, 1, 0, -0.14, 0, 0.99, 15, 9.5, 25)
use_collision = true
size = Vector3(2.9, 2.6, 1.0)
material = SubResource("mat_wall")

[node name="Gatepost_Left" type="CSGBox3D" parent="PerimeterWalls"]
transform = Transform3D(0.99, 0, -0.1, 0, 1, 0, 0.1, 0, 0.99, -3, 10.2, 26)
use_collision = true
size = Vector3(1.5, 4.4, 1.5)
material = SubResource("mat_wall")

[node name="Gatepost_Right" type="CSGBox3D" parent="PerimeterWalls"]
transform = Transform3D(0.995, 0, 0.1, 0, 1, 0, -0.1, 0, 0.995, 3, 10.0, 26)
use_collision = true
size = Vector3(1.5, 4.0, 1.5)
material = SubResource("mat_wall")

[node name="WestWall" type="Node3D" parent="PerimeterWalls"]

[node name="Segment_0" type="CSGBox3D" parent="PerimeterWalls/WestWall"]
transform = Transform3D(0, 0, 1, 0, 1, 0, -1, 0, 0, -25, 9.5, 12)
use_collision = true
size = Vector3(3.5, 3.0, 1.0)
material = SubResource("mat_wall")

[node name="Segment_1" type="CSGBox3D" parent="PerimeterWalls/WestWall"]
transform = Transform3D(0.03, 0, 1, 0, 1, 0, -1, 0, 0.03, -25, 9.2, 8)
use_collision = true
size = Vector3(3.0, 2.4, 1.0)
material = SubResource("mat_wall")

[node name="Segment_2" type="CSGBox3D" parent="PerimeterWalls/WestWall"]
transform = Transform3D(-0.05, 0, 1, 0, 1, 0, -1, 0, -0.05, -25, 9.8, -10)
use_collision = true
size = Vector3(2.8, 2.6, 1.0)
material = SubResource("mat_wall")

[node name="Segment_3" type="CSGBox3D" parent="PerimeterWalls/WestWall"]
transform = Transform3D(0.08, 0, 1, 0, 1, 0, -1, 0, 0.08, -25, 9.0, -14)
use_collision = true
size = Vector3(3.2, 2.0, 1.0)
material = SubResource("mat_wall")

[node name="EastWall" type="Node3D" parent="PerimeterWalls"]

[node name="Segment_0" type="CSGBox3D" parent="PerimeterWalls/EastWall"]
transform = Transform3D(0, 0, -1, 0, 1, 0, 1, 0, 0, 25, 9.0, 6)
use_collision = true
size = Vector3(3.0, 2.0, 1.0)
material = SubResource("mat_wall")

[node name="Segment_1" type="CSGBox3D" parent="PerimeterWalls/EastWall"]
transform = Transform3D(-0.04, 0, -1, 0, 1, 0, 1, 0, -0.04, 25, 9.2, 3)
use_collision = true
size = Vector3(2.8, 1.8, 1.0)
material = SubResource("mat_wall")

[node name="NorthWall" type="Node3D" parent="PerimeterWalls"]

[node name="Segment_0" type="CSGBox3D" parent="PerimeterWalls/NorthWall"]
transform = Transform3D(0.996, 0, 0.09, 0, 1, 0, -0.09, 0, 0.996, -10, 8.8, -24)
use_collision = true
size = Vector3(3.0, 1.6, 1.0)
material = SubResource("mat_wall")

[node name="Segment_1" type="CSGBox3D" parent="PerimeterWalls/NorthWall"]
transform = Transform3D(0.998, 0, -0.06, 0, 1, 0, 0.06, 0, 0.998, -6, 8.6, -24)
use_collision = true
size = Vector3(2.6, 1.2, 1.0)
material = SubResource("mat_wall")

[node name="RuinedStructures" type="Node3D" parent="."]

[node name="RuinedBarracks" type="Node3D" parent="RuinedStructures"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15, 8, 12)

[node name="Foundation" type="CSGBox3D" parent="RuinedStructures/RuinedBarracks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0)
use_collision = true
size = Vector3(8, 0.4, 6)
material = SubResource("mat_wall")

[node name="PartialWall_0" type="CSGBox3D" parent="RuinedStructures/RuinedBarracks"]
transform = Transform3D(0.99, 0, -0.08, 0, 1, 0, 0.08, 0, 0.99, -3.75, 1.6, 0)
use_collision = true
size = Vector3(0.5, 2.8, 4.2)
material = SubResource("mat_wall")

[node name="PartialWall_1" type="CSGBox3D" parent="RuinedStructures/RuinedBarracks"]
transform = Transform3D(0.995, 0, 0.1, 0, 1, 0, -0.1, 0, 0.995, 0, 1.2, -2.75)
use_collision = true
size = Vector3(4.8, 1.6, 0.5)
material = SubResource("mat_wall")

[node name="RuinedStorage" type="Node3D" parent="RuinedStructures"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -18, 8, -10)

[node name="Foundation" type="CSGBox3D" parent="RuinedStructures/RuinedStorage"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0)
use_collision = true
size = Vector3(5, 0.4, 5)
material = SubResource("mat_wall")

[node name="PartialWall" type="CSGBox3D" parent="RuinedStructures/RuinedStorage"]
transform = Transform3D(0.97, 0, -0.24, 0, 1, 0, 0.24, 0, 0.97, -2.25, 1.4, 0)
use_collision = true
size = Vector3(0.5, 2.4, 3.5)
material = SubResource("mat_wall")

[node name="CollapsedStable" type="Node3D" parent="RuinedStructures"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18, 8, 8)

[node name="Rubble_0" type="CSGBox3D" parent="RuinedStructures/CollapsedStable"]
transform = Transform3D(0.866, 0.2, 0.46, -0.25, 0.97, 0.06, -0.43, -0.16, 0.89, -1.5, 0.45, 1.2)
use_collision = true
size = Vector3(2.0, 0.9, 2.2)
material = SubResource("mat_wall")

[node name="Rubble_1" type="CSGBox3D" parent="RuinedStructures/CollapsedStable"]
transform = Transform3D(0.5, -0.2, 0.84, 0.24, 0.97, 0.07, -0.83, 0.16, 0.53, 1.0, 0.6, -0.8)
use_collision = true
size = Vector3(1.5, 1.2, 1.8)
material = SubResource("mat_wall")

[node name="Rubble_2" type="CSGBox3D" parent="RuinedStructures/CollapsedStable"]
transform = Transform3D(0.94, 0.15, -0.3, -0.18, 0.98, -0.08, 0.28, 0.13, 0.95, 2.5, 0.35, 0.5)
use_collision = true
size = Vector3(1.8, 0.7, 2.5)
material = SubResource("mat_wall")

[node name="Rubble_3" type="CSGBox3D" parent="RuinedStructures/CollapsedStable"]
transform = Transform3D(0.17, 0.25, 0.95, -0.32, 0.94, -0.13, -0.93, -0.28, 0.24, -2.0, 0.55, -2.0)
use_collision = true
size = Vector3(2.2, 1.1, 1.4)
material = SubResource("mat_wall")

[node name="Rubble_4" type="CSGBox3D" parent="RuinedStructures/CollapsedStable"]
transform = Transform3D(0.707, -0.14, 0.69, 0.18, 0.98, 0.05, -0.68, 0.09, 0.73, 0.5, 0.7, 2.5)
use_collision = true
size = Vector3(2.5, 1.4, 1.6)
material = SubResource("mat_wall")

[node name="EnvironmentalProps" type="Node3D" parent="."]

[node name="BrokenColumn_0" type="Node3D" parent="EnvironmentalProps"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 8, -5)

[node name="Column" type="CSGCylinder3D" parent="EnvironmentalProps/BrokenColumn_0"]
transform = Transform3D(0.989, 0, -0.15, 0, 1, 0, 0.15, 0, 0.989, 0, 1.5, 0)
use_collision = true
radius = 0.6
height = 3.0
sides = 8
material = SubResource("mat_ancient_stone")

[node name="FallenTop" type="CSGCylinder3D" parent="EnvironmentalProps/BrokenColumn_0"]
transform = Transform3D(0, 0.707, 0.707, -1, 0, 0, 0, -0.707, 0.707, 1.5, 0.4, 0.5)
use_collision = true
radius = 0.7
height = 1.5
sides = 8
material = SubResource("mat_ancient_stone")

[node name="BrokenColumn_1" type="Node3D" parent="EnvironmentalProps"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 8, -8)

[node name="Column" type="CSGCylinder3D" parent="EnvironmentalProps/BrokenColumn_1"]
transform = Transform3D(0.99, 0, 0.14, 0, 1, 0, -0.14, 0, 0.99, 0, 1.8, 0)
use_collision = true
radius = 0.6
height = 3.6
sides = 8
material = SubResource("mat_ancient_stone")

[node name="FallenTop" type="CSGCylinder3D" parent="EnvironmentalProps/BrokenColumn_1"]
transform = Transform3D(0.5, 0.612, 0.612, -0.87, 0.354, 0.354, 0, -0.707, 0.707, 1.8, 0.4, -0.3)
use_collision = true
radius = 0.7
height = 1.5
sides = 8
material = SubResource("mat_ancient_stone")

[node name="BrokenColumn_2" type="Node3D" parent="EnvironmentalProps"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 8, 15)

[node name="Column" type="CSGCylinder3D" parent="EnvironmentalProps/BrokenColumn_2"]
transform = Transform3D(0.985, 0, -0.17, 0, 1, 0, 0.17, 0, 0.985, 0, 1.3, 0)
use_collision = true
radius = 0.6
height = 2.6
sides = 8
material = SubResource("mat_ancient_stone")

[node name="FallenTop" type="CSGCylinder3D" parent="EnvironmentalProps/BrokenColumn_2"]
transform = Transform3D(-0.5, 0.612, -0.612, -0.87, -0.354, 0.354, 0, 0.707, 0.707, 1.2, 0.4, 0.8)
use_collision = true
radius = 0.7
height = 1.5
sides = 8
material = SubResource("mat_ancient_stone")

[node name="StoneAltar" type="Node3D" parent="EnvironmentalProps"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12, 8, -18)

[node name="Base" type="CSGBox3D" parent="EnvironmentalProps/StoneAltar"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0)
use_collision = true
size = Vector3(3, 0.5, 2)
material = SubResource("mat_rock")

[node name="Slab" type="CSGBox3D" parent="EnvironmentalProps/StoneAltar"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.65, 0)
use_collision = true
size = Vector3(2.5, 0.3, 1.5)
material = SubResource("mat_rock")

[node name="AltarGlow" type="OmniLight3D" parent="EnvironmentalProps/StoneAltar"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
light_color = Color(0.3, 0.5, 0.8, 1)
light_energy = 0.8
omni_range = 5.0

[node name="WornStatue" type="Node3D" parent="EnvironmentalProps"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 8, -15)

[node name="Base" type="CSGBox3D" parent="EnvironmentalProps/WornStatue"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
use_collision = true
size = Vector3(1.5, 0.6, 1.5)
material = SubResource("mat_ancient_stone")

[node name="Body" type="CSGCylinder3D" parent="EnvironmentalProps/WornStatue"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.85, 0)
use_collision = true
radius = 0.5
height = 2.5
sides = 6
material = SubResource("mat_ancient_stone")

[node name="Head" type="CSGSphere3D" parent="EnvironmentalProps/WornStatue"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.3, 0)
use_collision = true
radius = 0.4
material = SubResource("mat_ancient_stone")

[node name="TorchSconce_Left" type="Node3D" parent="EnvironmentalProps"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 10.5, 24)

[node name="Bracket" type="CSGBox3D" parent="EnvironmentalProps/TorchSconce_Left"]
use_collision = true
size = Vector3(0.3, 0.3, 0.3)
material = SubResource("mat_metal")

[node name="Flame" type="CSGSphere3D" parent="EnvironmentalProps/TorchSconce_Left"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 0.3)
radius = 0.2
material = SubResource("mat_fire")

[node name="TorchLight" type="OmniLight3D" parent="EnvironmentalProps/TorchSconce_Left"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0.3)
light_color = Color(1, 0.7, 0.4, 1)
light_energy = 1.5
omni_range = 8.0

[node name="TorchSconce_Right" type="Node3D" parent="EnvironmentalProps"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 10.5, 24)

[node name="Bracket" type="CSGBox3D" parent="EnvironmentalProps/TorchSconce_Right"]
use_collision = true
size = Vector3(0.3, 0.3, 0.3)
material = SubResource("mat_metal")

[node name="Flame" type="CSGSphere3D" parent="EnvironmentalProps/TorchSconce_Right"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 0.3)
radius = 0.2
material = SubResource("mat_fire")

[node name="TorchLight" type="OmniLight3D" parent="EnvironmentalProps/TorchSconce_Right"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0.3)
light_color = Color(1, 0.7, 0.4, 1)
light_energy = 1.5
omni_range = 8.0

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]

[node name="SpawnPoints" type="Node3D" parent="."]

[node name="SpawnPoint_default" type="Marker3D" parent="SpawnPoints" groups=["spawn_points"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8.1, 18)
metadata/spawn_id = "default"

[node name="SpawnPoint_from_aberdeen" type="Marker3D" parent="SpawnPoints" groups=["spawn_points"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8.1, 22)
metadata/spawn_id = "from_aberdeen"

[node name="SpawnPoint_from_mountains" type="Marker3D" parent="SpawnPoints" groups=["spawn_points"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8.1, -22)
metadata/spawn_id = "from_mountains"

[node name="EnemySpawnPoints" type="Node3D" parent="."]

[node name="Skeleton_0" type="Marker3D" parent="EnemySpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15, 8, 5)

[node name="Bandit_0" type="Marker3D" parent="EnemySpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 8, -5)

[node name="Skeleton_1" type="Marker3D" parent="EnemySpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 8, -15)

[node name="Bandit_1" type="Marker3D" parent="EnemySpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 8, 12)

[node name="Skeleton_2" type="Marker3D" parent="EnemySpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 8, -8)

[node name="Bandit_2" type="Marker3D" parent="EnemySpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 8, -20)

[node name="ChestPositions" type="Node3D" parent="."]

[node name="Chest_Tower" type="Marker3D" parent="ChestPositions"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 8.5, -4)
metadata/chest_name = "Tower Cache"
metadata/is_locked = true
metadata/lock_difficulty = 12
metadata/persistent_id = "kings_watch_chest_tower"

[node name="Chest_Barracks" type="Marker3D" parent="ChestPositions"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -14, 8.5, 10)
metadata/chest_name = "Old Supply Crate"
metadata/is_locked = false
metadata/persistent_id = "kings_watch_chest_barracks"

[node name="Chest_Altar" type="Marker3D" parent="ChestPositions"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -14, 8.5, -18)
metadata/chest_name = "Ritual Offering Box"
metadata/is_locked = true
metadata/lock_difficulty = 15
metadata/persistent_id = "kings_watch_chest_altar"

[node name="Player" parent="." instance=ExtResource("2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 9, 18)

[node name="HUD" parent="." instance=ExtResource("3")]
